# research-mcp-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py  smithery.yaml
research_mcp/data/: notion_ops.py  rmcp_server_config.py
